--- a/projectDetail/projectDetail.wxss
+++ b/projectDetail/projectDetail.wxss
@@ -1,4 +1,18 @@
 /* projectDetail.wxss */
+html, body {
+  height: 100%; /* 设置html和body高度为100% */
+  margin: 0; /* 去除默认的外边距 */
+}
+
+.container {
+  display: flex;            /* 启用 Flexbox */
+  flex-direction: column;   /* 设置为垂直排列 */
+  justify-content: flex-start; /* 从顶部开始排列子元素 */
+  min-height: 100vh;       /* 确保容器至少占满整个视口高度 */
+  background: linear-gradient(to bottom, #a8d8ff, #e1f5fe); /* 渐变浅蓝色背景 */
+  padding: 20px;           /* 内边距 */
+  box-sizing: border-box;  /* 包含内边距在内的总高度 */
+}
 .project-list {
   width: 100%; /* 满宽度 */
   display: flex;
@@ -6,15 +20,6 @@
   gap: 20px; /* 间距 */
   padding: 0 20px; /* 内边距 */
   /*align-items: center; /* 居中 */
-}
-.container {
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center; /* 垂直居中 */
-  align-items: center; /* 水平居中 */
-  padding: 20px;
-  box-sizing: border-box;
 }
 
 .project-detail {
