--- a/miniprogram/pages/project/project.less
+++ b/miniprogram/pages/project/project.less
@@ -55,7 +55,18 @@ html, body {
   flex-direction: column;   /* 垂直排列 */
   
 }
+.search-bar {
+  width:90%;
+  margin: 10px;
+  padding: 5px;
+}
 
+.search-input {
+  width: 100%;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid rgb(179, 176, 176);
+}
 .project-title {
   font-size: 18px;          /* 项目名称字体大小 */
   font-weight: bold;        /* 字体加粗 */
