--- a/miniprogram/pages/create/create.less
+++ b/miniprogram/pages/create/create.less
@@ -12,6 +12,12 @@ html, body {
   padding: 20px;
   box-sizing: border-box;
 }
+.remaining {
+  font-size: 24rpx; /* 字体大小 */
+  color: #7f8c8d; /* 灰色 */
+  text-align: right; /* 靠右 */
+  margin-top: -40rpx; /* 上边距 */
+}
 
 .form-container {
   width: 90%;
