--- a/miniprogram/pages/project/project.wxml
+++ b/miniprogram/pages/project/project.wxml
@@ -10,9 +10,10 @@
   
   <view class="project-list" style="position: relative; left: 0rpx; top: -60rpx">
     <block wx:for="{{filteredProjects}}" wx:key="index">
-      <view class="project-item show" bindtap="goToDetail" data-title="{{item.title}}" data-description="{{item.description}}">
+      <view class="project-item show" bindtap="goToDetail" data-title="{{item.title}}" data-description="{{item.description}}" data-nickname="{{item.nickname}}">
         <view class="project-info">
           <text class="project-title">项目名称: {{item.title}}</text>
+          <text class="project-description">创建者昵称: {{item.nickname}}</text>
           <text class="project-description">项目描述: {{item.description.length > 10 ?'点击查看详情' : item.description}}</text>
         </view>
       </view>
