--- a/miniprogram/pages/apply/apply.wxml
+++ b/miniprogram/pages/apply/apply.wxml
@@ -7,7 +7,7 @@
 
   <view class="form-item">
     <text class="label">联系方式:</text>
-    <input style="height: 77rpx; display: block; box-sizing: border-box" type="text" placeholder="请输入您的联系方式" bindinput="onContactInput" class="input" />
+    <input type="text" placeholder="请输入您的联系方式" bindinput="onContactInput" class="input" />
   </view>
 
   <button bindtap="submitApplication" class="submit-button">提交申请</button>
