--- a/miniprogram/pages/apply/apply.wxss
+++ b/miniprogram/pages/apply/apply.wxss
@@ -34,7 +34,19 @@ html, body {
 }
 
 /* 输入框和文本域的样式 */
-.input,
+.input{
+  width: 100%;
+  height:40px;
+  padding: 12px;
+  font-size: 15px;
+  color: #333;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  background-color: #f9f9f9;
+  box-sizing: border-box;
+  margin-top: 8px;
+}
+
 .textarea {
   width: 100%;
   padding: 12px;
@@ -46,7 +58,6 @@ html, body {
   box-sizing: border-box;
   margin-top: 8px;
 }
-
 /* 提交按钮的样式 */
 .submit-button {
   width: 100%;
