--- a/miniprogram/pages/receiveapply/receiveapply.wxml
+++ b/miniprogram/pages/receiveapply/receiveapply.wxml
@@ -1,17 +1,17 @@
 <view class="container">
   
   <view class="project-list" style="position: relative; left: 0rpx; top: -60rpx">
-    <block wx:for="{{filteredProjects}}" wx:key="index">
-      <view class="project-item show" bindtap="goToDetail" data-title="{{item.title}}" data-description="{{item.description}}" data-nickname="{{item.nickname}}">
+    <block wx:for="{{filteredApplications}}" wx:key="index">
+      <view class="project-item show" bindtap="goToDetail" data-reason="{{item.reason}}" data-contact="{{item.contact}}" data-project_id="{{item.project_id}} "data-account_id="{{item.account_id}}">
         <view class="project-info">
-          <text class="project-title">申请人： {{item.title}}</text>
-          <text class="project-description">申请理由: {{item.nickname}}</text>
-          <text class="project-description">联系方式: {{item.description.length > 10 ?'点击查看详情' : item.description}}</text>
+          <text class="project-title">申请人账号： {{item.account_id}}</text>
+          <text class="project-description">申请理由: {{item.reason}}</text>
+          <text class="project-description">联系方式: {{item.contact}}</text>
         </view>
       </view>
       <view class="divider"></view> <!-- 添加分隔线 -->
     </block>
-    <block wx:if="{{filteredProjects.length === 0}}">
+    <block wx:if="{{filteredApplications.length === 0}}">
       <text class="no-projects">暂时没有收到申请哦~</text>
     </block>
   </view>
