--- a/miniprogram/pages/friends/friends.wxss
+++ b/miniprogram/pages/friends/friends.wxss
@@ -1,5 +1,33 @@
 
 
+.container {
+ 
+  background: linear-gradient(to bottom, #a8d8ff, #e1f5fe); /* 渐变浅蓝色背景 */
+  
+}
+.no-results {
+  text-align: center;
+  color: #999;
+  font-size: 28rpx;
+  margin-top: 20rpx;
+}
+.search-bar {
+  display: flex;
+  justify-content: center;
+  margin: 20rpx 0; /* 增加上边距 */
+}
+
+.search-input {
+  width: 80%; /* 控制输入框的宽度 */
+  height: 60rpx;
+  border: 2rpx solid #ccc; /* 边框颜色和粗细 */
+  border-radius: 30rpx; /* 圆角 */
+  padding: 0 20rpx;
+  font-size: 28rpx;
+  text-align: center; /* 文本居中 */
+  background-color: #fff; /* 输入框背景色 */
+}
+
 .face {
     width: 120rpx;
     height: 120rpx;
